tabella storico_ordine

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Titillium Web', sans-serif;
 }
 html{
     background-color: tomato;
@@ -404,14 +405,14 @@ header {
     padding-top: 4px;
     width: 80px;
     height: 30px;
-    border:2px solid black;
+
     
 }
 
 .price_border::after{
     content: "€";
     font-size: 28px;
-    margin-top: -3px;
+    margin-top: -8px;
     margin-left: 5px;
 }
 
@@ -420,24 +421,21 @@ header {
 	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-	border:2px solid black;
 	width: 100%;
 	
 }
 .ingredienti .secondo{
-	border:2px solid black;
+
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 }
-.ingredienti .primo{
-	border:2px solid black;
-}
+
 .add{
 	display: flex;
 	flex-wrap: wrap;
 	margin-top: 20px;
-	border:2px solid black;
+
 }
 .add p{
 	
@@ -449,7 +447,6 @@ header {
     width: 45px; height: 40px;
     padding-bottom: 45px;
     border-radius: 50%; 
-    text-align: center;
     transition: box-shadow .3s;
     background: lightgrey;
     cursor: pointer;
@@ -457,12 +454,15 @@ header {
     appearance: none;
    }
   .add input[type="checkbox"]::after{
-       font-size: 40px;
+	margin-top: 8px;
+       font-size: 35px;
        content: '+';
        color: rgb(0, 0, 0);
   }
   
-  .add input:checked{ box-shadow: inset 0 0 0 20px #32a852;    
+  .add input:checked{ 
+	
+	box-shadow: inset 0 0 0 20px #32a852;    
     content: '+';
     color: white;
 }
@@ -472,7 +472,6 @@ header {
     height: auto;
     margin-top: 250px;
     margin-left: 800px;
-    border: 2px solid black;
   }
 
 
@@ -505,6 +504,43 @@ header {
   box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
   transform: translateY(-2px);
 }
+
+table {
+	margin-top: 70px;
+	 margin-left:auto;
+	 margin-right: auto;
+  width: 50%;
+  empty-cells: hide;
+} 
+
+.tabella a{
+	text-decoration: none;
+	color: black;
+}
+
+.tabella .blank{
+	background-color: transparent;
+	
+}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #04AA6D;
+  color: white;
+}
+tr{
+	background-color: #cfc9c9;
+}
+.pointer{
+	cursor: pointer;
+}
+th, td {
+	font-size: 18px;
+  text-align: center;
+}
+ tr:hover {background-color: rgb(255, 255, 255);}
+tr:nth-child(even) {background-color: aaa5a5;}
 
 @media (min-width: 768px) {
   .bt1 {
