--- a/src/main/resources/templates/menuForm.html
+++ b/src/main/resources/templates/menuForm.html
@@ -98,8 +98,8 @@
 			</div>
   </div>
    </div>
-   <div>
-				<span><a href="#overlay1">Next</a></span>
+   <div class="bt1">
+				<a href="#overlay1">Next</a>
 			</div>
  
 </form>
