--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -30,10 +30,10 @@
 				</div>
 				  <ul class="nav">
                     <li><a href="#">LA NOSTRA PIZZA</a></li>
-                    <li><a >FATTORINI</a></li>
+                    <li><a th:href="@{/fattorini}">FATTORINI</a></li>
                     <li><a th:href="@{/newpizza}">NUOVA PIZZA</a></li>
                     <li><a th:href="@{/ordine}">MENU</a></li>
-                    <li><a th:href="@{/menu}">STORICO ORDINI</a></li>
+                    <li><a th:href="@{/storico}">STORICO ORDINI</a></li>
                     <li><a href="#">CONTATTACI</a></li>
                   </ul>
                   <div class="btn">
