--- a/src/main/resources/templates/suppli.html
+++ b/src/main/resources/templates/suppli.html
@@ -48,7 +48,7 @@
 					<p>Da Pizza Revolution potete gustare il vero supplì al telefono,</p>
 					<p><b><i>quando lo spezzate in due un filo bianco di mozzarella terrà unite le cornette.</i></b></p>
 					<p>Mangiatelo tenendolo in un tovagliolino e non provate nemmeno a chiederci un coltello e una forchetta,</p>
-					</p>il vero supplì si mangia a mozzichi!</p>
+					<p>il vero supplì si mangia a mozzichi!</p>
 				</div>
 			</div>
 		</div> 
