--- a/src/main/resources/templates/default/ordine.html
+++ b/src/main/resources/templates/default/ordine.html
@@ -184,12 +184,7 @@ input {
 </style>
 
 <html>
-<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  
-<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
-</head>
-
+<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  </head>
 <body>
 
 		<header th:replace="fragments/base.html :: header"></header>
