Revert "default folder"
This reverts commit 1a22e6cc8290e1241641e8370a6c7e6d20c50dde.

--- a/src/main/resources/templates/menuForm.html
+++ b/src/main/resources/templates/menuForm.html
@@ -184,7 +184,12 @@ input {
 </style>
 
 <html>
-<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  </head>
+<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
 
 		<header th:replace="fragments/base.html :: header"></header>
